fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -44,9 +44,9 @@
 	}
 }
 
-input {
-	-webkit-appearance: none;
-    -webkit-border-radius: 0;
+button {
+	-webkit-appearance: none !important;
+    -webkit-border-radius: 0 !important;
 }
 
 #map_canvas {
